Fix content type badge wrapping on multi-line titles

--- a/src/templates/post.css
+++ b/src/templates/post.css
@@ -56,12 +56,14 @@
 }
 
 .post-item {
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-  gap: 5px;
+  display: inline;
   line-height: 25px;
   letter-spacing: -1px;
+}
+
+.post-item > * {
+  vertical-align: middle;
+  margin-left: 5px;
 }
 
 .post-date {
